2006-05-28 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Update SOS CFLAGS, Xt shouldn't be used and
	  enable debug options.
	  Add a check for GNU Make and warn the user if it does not appear
	  to be the make used.

2006-05-10 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Bump to 0.99.4

2006-03-30 Paul Jakma <paul.jakma@sun.com>

	* TODO: Add reminder for useful MED functionality we should
	  implement.

2006-02-15 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Check for mallinfo, being careful to link test
	  so we can detect things like umem being used (which doesn't
	  provide a mallinfo).

2006-01-31 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Cleanup the hideous {net,ucd}-snmp section
	  by removing ucd-snmp. Hence fixing detection where
	  net-snmp is installed in /usr/local (Boris Kovalenko reported
	  the problem).

2006-01-19 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Bump to 0.99.3

2005-11-26 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Collect together CFLAGS based on compiler
	  detected a bit. Recognise and set default CFLAGS for SunPro /
	  SOS10.

2005-11-14 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Tell gcc we like C99.
	  [bug #231] Check and test for stdint.h.

2005-11-11 Paul Jakma <paul.jakma@sun.com>

	* NEWS: Update.
	* configure.ac: Bump to 0.99.2

2005-11-10 Paul Jakma <paul.jakma@sun.com>

	* HACKING: Add recommendation to provide a single Subject
	  style description to the commit message.
	  Add some recommendations for ChangeLog.

2005-09-29 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Add the test for Solaris least-privileges. Set
	  defines for whether capabilities are supported and whether of
	  the linux or solaris variety.
	  Add missing-prototypes, missing-declarations, char-subscripts
	  and cast-qual warnings to default cflags, cause Hasso enjoys warnings,
	  and we really should clean the remaining ones up. (ie isisd..).